<resources>
    <string name="app_name">Driver Checker</string>
    <string name="storage_permission_denied_message">The permission has been denied</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_video">Start video</string>
    <string name="ok">OK</string>
    <string name="permission_required">Permission is required</string>
    <string name="permission_granted">Permission has been granted</string>
    <string name="label_result">Result</string>
    <string name="label_camera">Camera</string>
    <string name="label_log">Log</string>
    <string name="stop_capture">Stop Recording</string>
    <string name="start_capture">Start Recording</string>
    <string name="stop_live">Stop Live</string>
    <string name="start_live">Start Live</string>
    <string name="result_title">Title:</string>
    <string name="result_value">Result:</string>
    <string name="table_header_name">Name</string>
    <string name="table_header_images">Images</string>
    <string name="table_header_classes">Classes</string>
    <string name="table_header_objects">Objects</string>
    <string name="confidence">Confidence:</string>
    <string name="label_about">About</string>
    <string name="label_info">Info</string>
    <string name="label_settings">Settings</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="log">Log</string>
    <string name="add_word">Add Word</string>
    <string name="button_save">Save</string>
</resources>