<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdMetrics"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/final_results_view"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:weightSum="6"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|end"
                    android:labelFor="@id/editTitle"
                    android:text="@string/result_title"
                    android:textAlignment="gravity"
                    android:textSize="25sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/editTitle" />

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="5dp"
                    android:inputType="text"
                    android:textSize="25sp"
                    android:autofillHints="Name" />
                
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    app:layout_constraintBaseline_toBaselineOf="@id/editTitle"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginVertical="5dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:labelFor="@id/txtResults"
                    android:text="@string/result_value"
                    android:textAlignment="textEnd"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtResults"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginHorizontal="5dp"

                    android:textAlignment="center"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginVertical="5dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:labelFor="@id/txtConfidence"
                    android:text="@string/confidence"
                    android:textAlignment="textEnd"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtConfidence"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/table_header_name"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/table_header_images"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/table_header_classes"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/table_header_objects"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_table_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/group_item"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/final_results_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:elevation="6dp"
        tools:listitem="@layout/prediction_item"
        app:layout_constraintTop_toBottomOf="@id/crdMetrics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />


</androidx.constraintlayout.widget.ConstraintLayout>