<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_dynamic_neutral50"
    android:padding="10dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--   TITLE     -->
        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            card_view:layout_constraintTop_toTopOf="@id/text_result"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="@id/text_result"
            android:background="@color/material_dynamic_primary40"
            android:orientation="horizontal"
            />
        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Result"
            card_view:layout_constraintTop_toTopOf="@id/layout_title"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/text_frame"
            card_view:layout_constraintBottom_toBottomOf="@id/layout_title"
            card_view:layout_constraintBaseline_toBaselineOf="@id/layout_title"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/text_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="50"
            card_view:layout_constraintTop_toTopOf="@id/layout_title"
            card_view:layout_constraintStart_toEndOf="@id/text_result"
            card_view:layout_constraintEnd_toStartOf="@id/text_threshold"
            card_view:layout_constraintBottom_toBottomOf="@id/layout_title"
            card_view:layout_constraintBaseline_toBaselineOf="@id/layout_title"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/text_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="80%"
            card_view:layout_constraintTop_toTopOf="@id/layout_title"
            card_view:layout_constraintStart_toEndOf="@id/text_frame"
            card_view:layout_constraintEnd_toEndOf="@id/layout_title"
            card_view:layout_constraintBottom_toBottomOf="@id/layout_title"
            card_view:layout_constraintBaseline_toBaselineOf="@id/layout_title"
            android:textSize="30sp" />


        <!--    FIRST ROW    -->
        <LinearLayout
            android:id="@+id/layout_confidence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="@id/layout_type"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/layout_type"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/label_confidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Confidence:"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/text_confidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="77%"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@id/layout_title"
            card_view:layout_constraintStart_toEndOf="@id/layout_confidence"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:id="@+id/label_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Type:"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/text_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Classification Wind"
                android:textSize="20sp" />
        </LinearLayout>

        <!--    SECOND ROW    -->
        <LinearLayout
            android:id="@+id/layout_total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@id/layout_type"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/layout_type"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            >
            <TextView
                android:id="@+id/label_total_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Total Time:"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/text_total_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="5.00000s"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_total_frames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@id/layout_type"
            card_view:layout_constraintStart_toEndOf="@id/layout_confidence"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginVertical="15dp"
            >
            <TextView
                android:id="@+id/label_total_frames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Total Frames:"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/text_total_frames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="30"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/table_group_metrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:gravity="center"
            android:orientation="vertical"
            card_view:layout_constraintTop_toBottomOf="@id/layout_total_time"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            >

            <LinearLayout
                android:id="@+id/text_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:text="@string/table_header_name"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:text="@string/table_header_images"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:text="@string/table_header_classes"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:text="@string/table_header_objects"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_table_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_group"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="Check Images"
            card_view:layout_constraintTop_toBottomOf="@id/table_group_metrics"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>